--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <script src="https://use.fontawesome.com/0a34a79056.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/assets/js/validation.js"></script>
+    <script src="./assets/js/validation.js"></script>
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -32,7 +32,7 @@
     <title>DESIGN-ATHON</title>
     <style>
       body {
-        background-image: url('/assets/img/2.png');
+        background-image: url('./assets/img/2.png');
         background-color: rgb(186, 122, 245);
       }
 
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
       <a class="navbar-brand" href="/landingpage.html"
         ><img
-          src="/assets/img/hackmania.png"
+          src="./assets/img/hackmania.png"
           alt="POST JOB"
           height="50"
           width="50"
