--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-      <a class="navbar-brand" href="/landingpage.html"
+      <a class="navbar-brand" href="./landingpage.html"
         ><img
           src="./assets/img/hackmania.png"
           alt="POST JOB"
@@ -68,13 +68,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li style="text-align: center" class="nav-item active">
-            <a class="nav-link" href="/landingpage.html"
+            <a class="nav-link" href="./landingpage.html"
               ><i class="fas fa-home"></i> HOME
               <span class="sr-only">(current)</span></a
             >
           </li>
           <li style="text-align: center" class="nav-item">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href=".#"
               ><svg
                 width="1em"
                 height="1em"
@@ -92,16 +92,16 @@
             </a>
           </li>
           <li style="text-align: center" class="nav-item">
-            <a class="nav-link" href="/contactus.html"
+            <a class="nav-link" href="./contactus.html"
               ><i class="fas fa-question-circle"></i> CONTACT US
             </a>
           </li>
           <li style="text-align: center" class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-info"></i> INFO </a>
+            <a class="nav-link" href=".#"><i class="fas fa-info"></i> INFO </a>
           </li>
 
           <li style="text-align: center" class="nav-item d-lg-none d-xl-none">
-            <a class="btn btn-outline-success my-2 my-sm-0" href="/login.html"
+            <a class="btn btn-outline-success my-2 my-sm-0" href="./login.html"
               ><i class="fas fa-sign-in-alt"></i> LOGIN</a
             >
           </li>
@@ -111,7 +111,7 @@
             style="text-align: center; list-style: none"
             class="nav-item d-none d-lg-block d-xl-block"
           >
-            <a class="btn btn-outline-success my-2 my-sm-0" href="/login.html"
+            <a class="btn btn-outline-success my-2 my-sm-0" href="./login.html"
               ><i class="fas fa-sign-in-alt"></i> LOGIN</a
             >
           </li>
@@ -146,13 +146,13 @@
                 <a
                   style="text-decoration: none"
                   class="btn btn-lg btn-block btn-outline-primary"
-                  href="/RegistrationOrganization.html"
+                  href="./RegistrationOrganization.html"
                   >Register Here</a
                 >
                 <a
                   style="text-decoration: none"
                   class="btn btn-lg btn-block btn-outline-primary"
-                  href="/Organizationdashboard.html"
+                  href="./Organizationdashboard.html"
                   >Organization Dashboard</a
                 >
               </footer>
@@ -177,13 +177,13 @@
                 <a
                   style="text-decoration: none"
                   class="btn btn-lg btn-block btn-outline-primary"
-                  href="/RegistrationPO.html"
+                  href="./RegistrationPO.html"
                   >Register Here</a
                 >
                 <a
                   style="text-decoration: none"
                   class="btn btn-lg btn-block btn-outline-primary"
-                  href="/placementdashboard.html"
+                  href="./placementdashboard.html"
                   >Placement Dashboard</a
                 >
               </footer>
@@ -207,13 +207,13 @@
               <a
                 style="text-decoration: none"
                 class="btn btn-lg btn-block btn-outline-primary"
-                href="/RegistrationStudent.html"
+                href="./RegistrationStudent.html"
                 >Register Here</a
               >
               <a
                 style="text-decoration: none"
                 class="btn btn-lg btn-block btn-outline-primary"
-                href="/studentdashboard.html"
+                href="./studentdashboard.html"
                 >Student Dashboard</a
               >
             </div>
@@ -236,13 +236,13 @@
               <a
                 style="text-decoration: none"
                 class="btn btn-lg btn-block btn-outline-primary"
-                href="/RegistrationFaculty.html"
+                href="./RegistrationFaculty.html"
                 >Register Here</a
               >
               <a
                 style="text-decoration: none"
                 class="btn btn-lg btn-block btn-outline-primary"
-                href="/Facultydashboard.html"
+                href="./Facultydashboard.html"
                 >Faculty Dashboard</a
               >
             </div>
@@ -259,24 +259,24 @@
         <div class="row">
           <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
             <ul class="list-unstyled mb-2" style="list-style: disc">
-              <li class="list-item"><a href="#">About</a></li>
-              <li class="list-item"><a href="/contactus.html">Contact</a></li>
-              <li class="list-item"><a href="#">Terms of  Use</a></li>
-              <li class="list-item"><a href="#">Privacy Policy</a></li>
+              <li class="list-item"><a href=".#">About</a></li>
+              <li class="list-item"><a href="./contactus.html">Contact</a></li>
+              <li class="list-item"><a href=".#">Terms of  Use</a></li>
+              <li class="list-item"><a href=".#">Privacy Policy</a></li>
             </ul>
           </div>
           <div class="col-lg-6 my-auto h-100 text-center text-lg-right">
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a href="#"
+                <a href=".#"
                   ><i class="fa fa-facebook-square fa-2x fa-fw"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-twitter fa-2x fa-fw"></i></a>
+                <a href=".#"><i class="fa fa-twitter fa-2x fa-fw"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-instagram fa-2x fa-fw"></i></a>
+                <a href=".#"><i class="fa fa-instagram fa-2x fa-fw"></i></a>
               </li>
             </ul>
           </div>
