correcting the path

--- a/mentee.html
+++ b/mentee.html
@@ -14,18 +14,18 @@
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/pricing/"> -->
 
     <!-- Bootstrap core CSS -->
-    <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- <link href=".../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
 
     <style>
         body {
-            background-image: url("/assets/img/2.png");
+            background-image: url("./assets/img/2.png");
             background-color: rgb(186, 122, 245);
         }
 
@@ -45,19 +45,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <h2><a href="/landingpage.html" class="navbar-brand ">POST JOB</a></h2>
+        <h2><a href="./landingpage.html" class="navbar-brand ">POST JOB</a></h2>
         <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ml-auto nav-fill">
 
                 <li class="nav-item px-4">
-                    <a href="/Facultydashboard.html" class="nav-link active">Home <span
+                    <a href="./Facultydashboard.html" class="nav-link active">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/mentee.html" class="nav-link ">My Mentee</a>
+                    <a href="./mentee.html" class="nav-link ">My Mentee</a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/mentorsforfaculty.html" class="nav-link ">Mentors</a>
+                    <a href="./mentorsforfaculty.html" class="nav-link ">Mentors</a>
                 </li>
                 <li class="nav-item dropdown no-arrow mx-1">
                     <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
@@ -103,7 +103,7 @@
                             <h6 class="dropdown-header">alerts center</h6>
                             <a class="d-flex align-items-center dropdown-item" href="#">
                                 <div class="dropdown-list-image mr-3"><img class="rounded-circle"
-                                        src="/assets/img/mentor.jpg" height="40px" width="40px">
+                                        src="./assets/img/mentor.jpg" height="40px" width="40px">
                                     <div class="bg-success status-indicator"></div>
                                 </div>
                                 <div class="font-weight-bold">
@@ -114,7 +114,7 @@
                             </a>
                             <a class="d-flex align-items-center dropdown-item" href="#">
                                 <div class="dropdown-list-image mr-3"><img class="rounded-circle"
-                                        src="/assets/img/mentor2.jpg" height="40px" width="40px">
+                                        src="./assets/img/mentor2.jpg" height="40px" width="40px">
                                     <div class="status-indicator"></div>
                                 </div>
                                 <div class="font-weight-bold">
@@ -125,7 +125,7 @@
                             </a>
                             <a class="d-flex align-items-center dropdown-item" href="#">
                                 <div class="dropdown-list-image mr-3"><img class="rounded-circle"
-                                        src="/assets/img/mentor3.jpg" height="40px" width="40px">
+                                        src="./assets/img/mentor3.jpg" height="40px" width="40px">
                                     <div class="bg-warning status-indicator"></div>
                                 </div>
                                 <div class="font-weight-bold">
@@ -137,7 +137,7 @@
                             </a>
                             <a class="d-flex align-items-center dropdown-item" href="#">
                                 <div class="dropdown-list-image mr-3"><img class="rounded-circle"
-                                        src="/assets/img/mentor.jpg" height="40px" width="40px">
+                                        src="./assets/img/mentor.jpg" height="40px" width="40px">
                                     <div class="bg-success status-indicator"></div>
                                 </div>
                                 <div class="font-weight-bold">
@@ -156,7 +156,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Courses</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="servicesDropdown">
-                        <a class="dropdown-item" href="/development.html">Development</a>
+                        <a class="dropdown-item" href="./development.html">Development</a>
                         <a class="dropdown-item" href="#">Programming</a>
                         <a class="dropdown-item" href="#">Professional Services</a>
 
@@ -337,7 +337,7 @@
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
                     <ul class="list-unstyled mb-2" style="list-style:disc;">
                         <li class="list-item"><a href="#">About</a></li>
-                        <li class="list-item"><a href="/contactus.html">Contact</a></li>
+                        <li class="list-item"><a href="./contactus.html">Contact</a></li>
                         <li class="list-item"><a href="#">Terms of  Use</a></li>
                         <li class="list-item"><a href="#">Privacy Policy</a></li>
                     </ul>
@@ -372,7 +372,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
-    <script src="/assets/js/script.min.js"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
