--- a/mentors.html
+++ b/mentors.html
@@ -7,10 +7,10 @@
     <title>Untitled</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css?h=efffc71e19b25acb20e6cd68d38e5666">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
     <style>
         body {
-            background-image: url("/assets/img/2.png");
+            background-image: url("./assets/img/2.png");
             background-color: rgb(186, 122, 245);
         }
 
@@ -28,16 +28,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <h2><a href="/landingpage.html" class="navbar-brand ">POST JOB</a></h2>
+        <h2><a href="./landingpage.html" class="navbar-brand ">POST JOB</a></h2>
         <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ml-auto nav-fill">
 
                 <li class="nav-item px-4">
-                    <a href="/studentdashboard.html" class="nav-link ">Home <span
+                    <a href="./studentdashboard.html" class="nav-link ">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/jobs.html" class="nav-link ">JOBS</a>
+                    <a href="./jobs.html" class="nav-link ">JOBS</a>
                 </li>
                 <li class="nav-item px-4 dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
@@ -92,7 +92,7 @@
                     </div>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/mentors.html" class="nav-link active">Mentors</a>
+                    <a href="./mentors.html" class="nav-link active">Mentors</a>
                 </li>
                 <li class="nav-item px-4 dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
@@ -116,8 +116,8 @@
                             <div>
                                 <div class="dropdown-header">Development</div>
                                 <a class="dropdown-item" href="#">Bespoke software</a>
-                                <a class="dropdown-item" href="/training.html">Mobile apps</a>
-                                <a class="dropdown-item" href="/training.html">Websites</a>
+                                <a class="dropdown-item" href="./training.html">Mobile apps</a>
+                                <a class="dropdown-item" href="./training.html">Websites</a>
                             </div>
                             <div>
                                 <div class="dropdown-header">Professional Services</div>
@@ -134,14 +134,14 @@
                     </div>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/editresume.html" class="nav-link ">Resume</a>
+                    <a href="./editresume.html" class="nav-link ">Resume</a>
                 </li>
                 <li class="nav-item px-4 dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PROFILE</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="servicesDropdown">
                         <a class="dropdown-item" href="#">My Application</a>
-                        <!-- <a class="dropdown-item" href="/editresume.html">Edit Resume</a> -->
+                        <!-- <a class="dropdown-item" href="./editresume.html">Edit Resume</a> -->
                         <a class="dropdown-item" href="#">Edit Profile</a>
                         <a class="dropdown-item" href="#">Logout</a>
 
@@ -161,7 +161,7 @@
             <!-- End: Intro -->
             <!-- Start: Articles -->
             <div class="row articles ">
-                <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid" src="/assets/img/mentor.jpg"></a>
+                <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid" src="./assets/img/mentor.jpg"></a>
                     <h3 class="name ">Sushank,India</h3>
                     <h3 class="name">Computer Services/Information Technology</h3>
                     <div><strong> How I can help</strong></div>
@@ -174,7 +174,7 @@
                     <div class="p-3"> <button class="btn btn-primary">View Profile</button></div>
                 </div>
                 <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid"
-                            src="/assets/img/mentor2.jpg"></a>
+                            src="./assets/img/mentor2.jpg"></a>
                     <h3 class="name">Sai teja,India</h3>
                     <h3 class="name">Computer Services/Information Technology</h3>
                     <div><strong> How I can help</strong></div>
@@ -186,7 +186,7 @@
                     <div class="p-3"> <button class="btn btn-primary">View Profile</button></div>
                 </div>
                 <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid"
-                            src="/assets/img/mentor3.jpg"></a>
+                            src="./assets/img/mentor3.jpg"></a>
                     <h3 class="name">Alexa,India</h3>
                     <h3 class="name">Computer Services/Information Technology</h3>
                     <div><strong> How I can help</strong></div>
@@ -200,7 +200,7 @@
             <!-- End: Articles -->
             <!-- Start: Articles -->
             <div class="row articles ">
-                <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid" src="/assets/img/mentor.jpg"></a>
+                <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid" src="./assets/img/mentor.jpg"></a>
                     <h3 class="name text-white">Sushank,India</h3>
                     <h3 class="name">Computer Services/Information Technology</h3>
                     <div><strong> How I can help</strong></div>
@@ -213,7 +213,7 @@
                     <div class="p-3"> <button class="btn btn-primary">View Profile</button></div>
                 </div>
                 <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid"
-                            src="/assets/img/mentor2.jpg"></a>
+                            src="./assets/img/mentor2.jpg"></a>
                     <h3 class="name">Sai teja,India</h3>
                     <h3 class="name">Computer Services/Information Technology</h3>
                     <div><strong> How I can help</strong></div>
@@ -225,7 +225,7 @@
                     <div class="p-3"> <button class="btn btn-primary">View Profile</button></div>
                 </div>
                 <div class="col-sm-3 col-md-3 item card m-4"><a href="#"><img class="img-fluid"
-                            src="/assets/img/mentor3.jpg"></a>
+                            src="./assets/img/mentor3.jpg"></a>
                     <h3 class="name">Alexa,India</h3>
                     <h3 class="name">Computer Services/Information Technology</h3>
                     <div><strong> How I can help</strong></div>
@@ -258,7 +258,7 @@
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
                     <ul class="list-unstyled mb-2" style="list-style:disc;">
                         <li class="list-item"><a href="#">About</a></li>
-                        <li class="list-item"><a href="/contactus.html">Contact</a></li>
+                        <li class="list-item"><a href="./contactus.html">Contact</a></li>
                         <li class="list-item"><a href="#">Terms of  Use</a></li>
                         <li class="list-item"><a href="#">Privacy Policy</a></li>
                     </ul>
