--- a/studenttable.html
+++ b/studenttable.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Student Details</title>
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=67da9ce2fd07474e0e4cb72471fbdcac">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
@@ -18,11 +18,11 @@
         href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" />
     <script src="https://use.fontawesome.com/0a34a79056.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/assets/js/validation.js"></script>
+    <script src="./assets/js/validation.js"></script>
 
     <style>
         body {
-            background-image: url("/assets/img/2.png");
+            background-image: url("./assets/img/2.png");
             background-color: rgb(186, 122, 245);
         }
 
@@ -40,16 +40,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <h2><a href="/landingpage.html" class="navbar-brand ">POST JOB</a></h2>
+        <h2><a href="./landingpage.html" class="navbar-brand ">POST JOB</a></h2>
         <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ml-auto nav-fill">
 
                 <li class="nav-item px-4">
-                    <a href="/placementdashboard.html" class="nav-link active">Home <span
+                    <a href="./placementdashboard.html" class="nav-link active">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/studenttable.html" class="nav-link ">Student Details</a>
+                    <a href="./studenttable.html" class="nav-link ">Student Details</a>
                 </li>
                 <li class="nav-item px-4">
                     <a href="#" class="nav-link ">Organization Details</a>
@@ -59,7 +59,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profile</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="servicesDropdown">
                         <a class="dropdown-item" href="#">Edit college info</a>
-                        <a class="dropdown-item" href="/studenttable.html">Edit Student Details</a>
+                        <a class="dropdown-item" href="./studenttable.html">Edit Student Details</a>
                         <a class="dropdown-item" href="#">Edit Profile</a>
                         <a class="dropdown-item" href="#">Logout</a>
 
@@ -230,7 +230,7 @@
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
                     <ul class="list-unstyled mb-2" style="list-style:disc;">
                         <li class="list-item"><a href="#">About</a></li>
-                        <li class="list-item"><a href="/contactus.html">Contact</a></li>
+                        <li class="list-item"><a href="./contactus.html">Contact</a></li>
                         <li class="list-item"><a href="#">Terms of  Use</a></li>
                         <li class="list-item"><a href="#">Privacy Policy</a></li>
                     </ul>
@@ -257,7 +257,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="/assets/js/script.min.js?h=b86d882c5039df370319ea6ca19e5689"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
