--- a/editresume.html
+++ b/editresume.html
@@ -9,12 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
 
     <title>Resume Editing</title>
     <style>
         body {
-            background-image: url("/assets/img/2.png");
+            background-image: url("./assets/img/2.png");
             background-color: rgb(186, 122, 245);
         }
 
@@ -32,15 +32,15 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <h2><a href="/landingpage.html" class="navbar-brand ">POST JOB</a></h2>
+        <h2><a href="./landingpage.html" class="navbar-brand ">POST JOB</a></h2>
         <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ml-auto nav-fill">
 
                 <li class="nav-item px-4">
-                    <a href="/studentdashboard.html" class="nav-link">Home <span class="sr-only">(current)</span></a>
+                    <a href="./studentdashboard.html" class="nav-link">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/jobs.html" class="nav-link ">JOBS</a>
+                    <a href="./jobs.html" class="nav-link ">JOBS</a>
                 </li>
                 <li class="nav-item px-4 dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
@@ -116,8 +116,8 @@
                             <div>
                                 <div class="dropdown-header">Development</div>
                                 <a class="dropdown-item" href="#">Bespoke software</a>
-                                <a class="dropdown-item" href="/training.html">Mobile apps</a>
-                                <a class="dropdown-item" href="/training.html">Websites</a>
+                                <a class="dropdown-item" href="./training.html">Mobile apps</a>
+                                <a class="dropdown-item" href="./training.html">Websites</a>
                             </div>
                             <div>
                                 <div class="dropdown-header">Professional Services</div>
@@ -134,14 +134,14 @@
                     </div>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/editresume.html" class="nav-link active">Resume</a>
+                    <a href="./editresume.html" class="nav-link active">Resume</a>
                 </li>
                 <li class="nav-item px-4 dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PROFILE</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="servicesDropdown">
                         <a class="dropdown-item" href="#">My Application</a>
-                        <!-- <a class="dropdown-item" href="/editresume.html">Edit Resume</a> -->
+                        <!-- <a class="dropdown-item" href="./editresume.html">Edit Resume</a> -->
                         <a class="dropdown-item" href="#">Edit Profile</a>
                         <a class="dropdown-item" href="#">Logout</a>
 
@@ -741,7 +741,7 @@
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
                     <ul class="list-unstyled mb-2" style="list-style:disc;">
                         <li class="list-item"><a href="#">About</a></li>
-                        <li class="list-item"><a href="/contactus.html">Contact</a></li>
+                        <li class="list-item"><a href="./contactus.html">Contact</a></li>
                         <li class="list-item"><a href="#">Terms of  Use</a></li>
                         <li class="list-item"><a href="#">Privacy Policy</a></li>
                     </ul>
