--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -7,22 +7,22 @@
     <title>Forgot Password</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css?h=ab2d1eb0d8e707ab1d9c2a8d94851c0a">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/assets/js/validation.js"></script>
+    <script src="./assets/js/validation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" />
     <script src="https://use.fontawesome.com/0a34a79056.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/assets/js/validation.js"></script>
+    <script src="./assets/js/validation.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <script src="https://use.fontawesome.com/0a34a79056.js"></script>
     <style>
         .bg {
-            background-image: url("/assets/img/2.png");
+            background-image: url("./assets/img/2.png");
         }
 
         #pagefooter {
@@ -33,7 +33,7 @@
 
 <body class="bg">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-        <a class="navbar-brand" href="/landingpage.html"><img src="/assets/img/hackmania.png" alt="POST JOB" height="50" width="50">
+        <a class="navbar-brand" href="./landingpage.html"><img src="./assets/img/hackmania.png" alt="POST JOB" height="50" width="50">
             POST JOB</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li style="text-align: center;" class="nav-item active">
-                    <a class="nav-link" href="/landingpage.html"><i class="fas fa-home"></i> HOME <span
+                    <a class="nav-link" href="./landingpage.html"><i class="fas fa-home"></i> HOME <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li style="text-align: center;" class="nav-item">
@@ -55,7 +55,7 @@
                         </svg> ABOUT </a>
                 </li>
                 <li style="text-align: center;" class="nav-item">
-                    <a class="nav-link" href="/contactus.html"><i class="fas fa-question-circle"></i> CONTACT US </a>
+                    <a class="nav-link" href="./contactus.html"><i class="fas fa-question-circle"></i> CONTACT US </a>
                 </li>
                 <li style="text-align: center;" class="nav-item ">
                     <a class="nav-link" href="#"><i class="fas fa-info"></i> INFO </a>
@@ -63,14 +63,14 @@
 
                 <li style="text-align: center;" class="nav-item d-lg-none d-xl-none">
 
-                    <a class=" btn btn-outline-success my-2 my-sm-0" href="/login.html"><i
+                    <a class=" btn btn-outline-success my-2 my-sm-0" href="./login.html"><i
                             class="fas fa-sign-in-alt"></i> LOGIN</a>
                 </li>
 
             </ul>
             <ul class=class="navbar-nav mr-auto">
                 <li style="text-align: center; list-style: none;" class="nav-item d-none d-lg-block d-xl-block">
-                    <a class="btn btn-outline-success my-2 my-sm-0" href="/login.html"><i
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="./login.html"><i
                             class="fas fa-sign-in-alt"></i> LOGIN</a>
                 </li>
             </ul>
@@ -92,7 +92,7 @@
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
                     <ul class="list-unstyled mb-2" style="list-style:disc;">
                         <li class="list-item"><a href="#">About</a></li>
-                        <li class="list-item"><a href="/contactus.html">Contact</a></li>
+                        <li class="list-item"><a href="./contactus.html">Contact</a></li>
                         <li class="list-item"><a href="#">Terms of  Use</a></li>
                         <li class="list-item"><a href="#">Privacy Policy</a></li>
                     </ul>
