--- a/jobspost.html
+++ b/jobspost.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Post Jobs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css?h=d6a654816bc5a1a8d88f7b04e61f2338">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
     <style>
         body {
-            background-image: url("/assets/img/2.png");
+            background-image: url("./assets/img/2.png");
             background-color: rgb(186, 122, 245);
         }
 
@@ -30,26 +30,26 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <h2><a href="/landingpage.html" class="navbar-brand ">POST JOB</a></h2>
+        <h2><a href="./landingpage.html" class="navbar-brand ">POST JOB</a></h2>
         <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ml-auto nav-fill">
 
                 <li class="nav-item px-4">
-                    <a href="/Organizationdashboard.html" class="nav-link active">Home <span
+                    <a href="./Organizationdashboard.html" class="nav-link active">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/jobspost.html" class="nav-link ">Post Jobs</a>
+                    <a href="./jobspost.html" class="nav-link ">Post Jobs</a>
                 </li>
                 <li class="nav-item px-4">
-                    <a href="/internshippost.html" class="nav-link ">Post Internships</a>
+                    <a href="./internshippost.html" class="nav-link ">Post Internships</a>
                 </li>
                 <li class="nav-item px-4 dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PROFILE</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="servicesDropdown">
                         <a class="dropdown-item" href="#">My Posts</a>
-                        <a class="dropdown-item" href="/editresume.html">Edit Posts</a>
+                        <a class="dropdown-item" href="./editresume.html">Edit Posts</a>
                         <a class="dropdown-item" href="#">Edit Profile</a>
                         <a class="dropdown-item" href="#">Logout</a>
 
@@ -159,7 +159,7 @@
                 <div class="col-lg-6 my-auto h-100 text-center text-lg-left">
                     <ul class="list-unstyled mb-2" style="list-style:disc;">
                         <li class="list-item"><a href="#">About</a></li>
-                        <li class="list-item"><a href="/contactus.html">Contact</a></li>
+                        <li class="list-item"><a href="./contactus.html">Contact</a></li>
                         <li class="list-item"><a href="#">Terms of  Use</a></li>
                         <li class="list-item"><a href="#">Privacy Policy</a></li>
                     </ul>
